--- a/settings/settings.toml
+++ b/settings/settings.toml
@@ -1,6 +1,10 @@
-[core]
-verbose = true
-
 [git]
-provider = github
-token = ""
+provider = "GitHub" # Options: GitHub, GitLab
+token = "" # Set this via environment variable
+
+[ai]
+provider = "Ollama" # Options: Anthropic, Groq, Ollama, OpenAI
+ollama_url = "http://localhost:11434/api/generate"
+ollama_model = "llama3.1"
+groq_api_key = "" # Set this via environment variable
+groq_model = "mixtral-8x7b-32768"
